--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 cfg-if = "1"
-chrono = { version = "0.4.26", features = ["serde"] }
+chrono = { version = "0.4.39", features = ["serde"] }
 console_log = { version = "1.0", optional = true, features = ["color"] }
 dioxus = { version = "0.3.2", default-features = false, features = [
   "dioxus-core-macro",
@@ -31,10 +31,7 @@ js-sys = "0.3.64"
 load-dotenv = "0.1.2"
 log = "0.4"
 once_cell = "1.18.0"
-reqwest = { git = "https://github.com/seanmonstar/reqwest", version = "0.11.18", features = [
-  "json",
-  "serde_json",
-] }
+reqwest = { version = "0.11.18", features = ["json", "serde_json"] }
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.99"
 thiserror = "1.0.40"
@@ -51,7 +48,6 @@ web-sys = { version = "0.3.64", features = [
   "Window",
 ] }
 wasm-bindgen = "0.2.87"
-
 # needed to build docs (bug in interprocess crate transitive dependency)
 interprocess = { version = "1.2.1", features = ["tokio"], optional = true }
 
