--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ default-members = [
   "backend/query",
   "frontend",
   "shared/cookie",
+  "shared/domain"
 ]
 members = [
   "backend/server",
@@ -12,5 +13,6 @@ members = [
   "backend/query",
   "frontend",
   "shared/cookie",
-  "tools/project-init",
+  "shared/domain",
+  "tools/project-init", "shared/domain",
 ]
