--- a/backend/query/Cargo.toml
+++ b/backend/query/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 
 [dependencies]
 bb8 = "0.8.0"
-bb8-diesel = { git = "https://github.com/overdrivenpotato/bb8-diesel.git" }
+async-trait = "0.1"
 chrono = { version = "0.4.23", features = ["serde"] }
-diesel-derive-newtype = "=2.0.0-rc.0"
+diesel-derive-newtype = "2.1.2"
 diesel_migrations = { version = "2.0.0", features = ["postgres"] }
 password-hash = { version = "0.5.0", features = ["std"] }
 r2d2 = "0.8.10"
@@ -21,8 +21,8 @@ tracing = { version = "0.1.37", features = ["attributes"] }
 url = { version = "2.2.2" }
 uuid = { version = "1.3.0", features = ["v4", "serde"] }
 
-uchat_domain = {path = "../../shared/domain", features = ["query"]}
-uchat_endpoint = {path = "../../shared/endpoint"}
+uchat_domain = { path = "../../shared/domain", features = ["query"] }
+uchat_endpoint = { path = "../../shared/endpoint" }
 
 [dependencies.diesel]
 features = [
@@ -30,10 +30,9 @@ features = [
   "uuid",
   "chrono",
   "serde_json",
-  "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
-  "postgres_backend",
+  "with-deprecated",
 ]
-version = "=2.0.3"
+version = "2.3.2"
 default-features = false
 
 [dev-dependencies]
