--- a/shared/domain/Cargo.toml
+++ b/shared/domain/Cargo.toml
@@ -14,11 +14,11 @@ thiserror = "1"
 uuid = { version = "1.3.0", features = ["v4", "serde", "js"] }
 
 # backend
-diesel-derive-newtype = {version = "2.0.0-rc.0", optional = true}
+diesel-derive-newtype = {version = "2.1.2", optional = true}
 
 [dependencies.diesel]
-version = "2.0.3"
-features = ["postgres", "uuid", "chrono", "serde_json", "postgres_backend", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"]
+version = "2.3.2"
+features = ["postgres", "uuid", "chrono", "serde_json", "with-deprecated"]
 default-features = false
 optional = true
 
