--- a/shared/endpoint/Cargo.toml
+++ b/shared/endpoint/Cargo.toml
@@ -3,12 +3,14 @@ name = "uchat_endpoint"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies]
-chrono = { version = "0.4.41", features = ["serde"] }
-load-dotenv = "0.1.2"
-serde = { version = "1.0.219", features = ["derive"] }
-thiserror = "2.0.12"
-url = { version = "2.5.4", features = ["serde"] }
-uuid = { version = "1.17.0", features = ["serde", "v4", "js"] }
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-uchat_domain = {path = "../domain"}
+[dependencies]
+chrono = { version = "0.4.24", features = ["serde"] }
+load-dotenv = "0.1.2"
+serde = { version = "1.0.159", features = ["derive"] }
+thiserror = "1.0.40"
+url = { version = "2.3.1", features = ["serde"] }
+uuid = { version = "1.3.0", features = ["v4", "serde", "js"] }
+
+uchat_domain = { path = "../domain" }
