--- a/backend/query/Cargo.toml
+++ b/backend/query/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 
 [dependencies]
 bb8 = "0.8.0"
-async-trait = "0.1"
+bb8-diesel = { git = "https://github.com/overdrivenpotato/bb8-diesel.git" }
 chrono = { version = "0.4.23", features = ["serde"] }
-diesel-derive-newtype = "2.1.2"
+diesel-derive-newtype = "=2.0.0-rc.0"
 diesel_migrations = { version = "2.0.0", features = ["postgres"] }
 password-hash = { version = "0.5.0", features = ["std"] }
 r2d2 = "0.8.10"
@@ -30,9 +30,10 @@ features = [
   "uuid",
   "chrono",
   "serde_json",
-  "with-deprecated",
+  "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
+  "postgres_backend",
 ]
-version = "2.3.2"
+version = "=2.0.3"
 default-features = false
 
 [dev-dependencies]
