--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 cfg-if = "1"
-chrono = { version = "0.4.24", features = ["serde"] }
+chrono = { version = "0.4.26", features = ["serde"] }
 console_log = { version = "1.0", optional = true, features = ["color"] }
 dioxus = { version = "0.3.2", default-features = false, features = [
   "dioxus-core-macro",
@@ -19,26 +19,24 @@ dioxus = { version = "0.3.2", default-features = false, features = [
   "macro",
 ] }
 dioxus-router = { version = "0.3.0", features = ["web"] }
-dioxus-web = "0.3.1"
+dioxus-web = "0.3.2"
 fermi = "0.3.0"
-futures = "0.3.27"
+futures = "0.3.28"
 gloo-file = { version = "0.2.3", features = ["futures"] }
 gloo-timers = { version = "0.2.6", features = ["futures"] }
-gloo-utils = "0.1.6"
-indexmap = "1.9.3"
-itertools = "0.10.5"
-js-sys = "0.3.61"
+gloo-utils = "0.1.7"
+indexmap = "2.0.0"
+itertools = "0.11.0"
+js-sys = "0.3.64"
 load-dotenv = "0.1.2"
 log = "0.4"
-once_cell = "1.17.1"
-reqwest = { version = "0.12.24", default-features = false, features = [
-  "json"
-] }
-serde = { version = "1.0.159", features = ["derive"] }
-serde_json = "1.0.95"
+once_cell = "1.18.0"
+reqwest = { version = "0.11.18", features = ["json", "serde_json"] }
+serde = { version = "1.0.164", features = ["derive"] }
+serde_json = "1.0.99"
 thiserror = "1.0.40"
-url = "2.3.1"
-web-sys = { version = "0.3.61", features = [
+url = "2.4.0"
+web-sys = { version = "0.3.64", features = [
   "Blob",
   "Document",
   "File",
@@ -49,7 +47,7 @@ web-sys = { version = "0.3.61", features = [
   "Location",
   "Window",
 ] }
-wasm-bindgen = "0.2.84"
+wasm-bindgen = "0.2.87"
 
 # needed to build docs (bug in interprocess crate transitive dependency)
 interprocess = { version = "1.2.1", features = ["tokio"], optional = true }
